# internal/handler/handler.go
@@ -353,6 +353,9 @@ func toProject(project *domain.Project) api.Project {
 		Key:          api.ProjectKey(project.Key),
 		Name:         project.Name,
 		Description:  project.Description,
+		State:        api.ProjectState(project.State),
+		ArchivedAt:   project.ArchivedAt,
+		ArchivedBy:   project.ArchivedBy,
 		ActiveIssues: project.ActiveIssues,
 		CreatedAt:    api.Timestamp(project.CreatedAt),
 		UpdatedAt:    api.Timestamp(project.UpdatedAt),
